--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://www.google.co.in/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjAsqWwp-_RAhUMKY8KHfJPCz4QjRwIBw&url=http%3A%2F%2Fwww.youngindiafellowship.com%2FStudentProfile.aspx&psig=AFQjCNHhX3Lbnu_Po2j5qOJn7K_z40i7BA&ust=1486052535781981" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
